<resources>
    <string name="app_name">PdaApp</string>
    <string name="title_activity_bind">BindActivity</string>

    <string name="title_bar_msg_text">门牌信息</string>
    <string name="btn_commit_text">提交</string>
    <string name="scan_success">扫描成功</string>
    <string name="scan_fail">扫描失败</string>
    <string name="scan_not">不是本系统的短链接</string>

    <string name="bind_activity_title_content">芯片绑定</string>
    <string name="bind_activity_short_link">短链接：</string>
    <string name="bind_activity_chip">芯片id：</string>
    <string name="bind_activity_scan">扫描</string>
    <string name="bind_activity_fetch">读取</string>
    <string name="bind_activity_commit">绑定</string>
    <string name="bind_activity_short_link_empty">短链接不能为空</string>
    <string name="bind_activity_chip_empty">芯片id不能为空</string>
    <string name="bind_activity_bind_success">绑定成功</string>
    <string name="bind_activity_bind_fail">绑定失败</string>

    <string name="web_activity_short_link_used">该短链接已被使用</string>
    <string name="web_activity_short_link_unuse">该短链接未被绑定</string>
    <string name="web_activity_need_data">该短链接未录入数据</string>
    <string name="web_activity_not_bind_short_link">该短链接已录入过数据，是否需要绑定芯片</string>
    <string name="web_activity_not_bind_short_link_normal">录入数据成功，是否需要绑定芯片</string>
    <string name="web_activity_not_bind_short_link_refresh">匹配数据成功，是否需要绑定芯片</string>
    <string name="web_activity_not_go">否</string>
    <string name="web_activity_go">是</string>
    <string name="web_activity_dialog_title">提示</string>

    <string name="msg_sex_text">性别：</string>
    <string name="msg_id_text">门牌号：</string>
    <string name="msg_phone_text">电话：</string>
    <string name="msg_mobile_text">手机：</string>
    <string name="msg_address_text">地址：</string>
    <string name="msg_community_text">社区：</string>
    <string name="msg_username_text">用户名：</string>
    <string name="msg_peoplenumber_text">人数：</string>
    <string name="msg_party_member_text">党员户：</string>

    <string name="report_title_content">报障</string>
    <string name="report_address">门牌短链接：</string>
    <string name="report_chip">芯片编号：</string>
    <string name="report_fetch">读取</string>
    <string name="report_scan">扫描</string>
</resources>
